--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.application.name=haushaltsmanager
+spring.application.name=fiscalnorth
 spring.jackson.mapper.accept-case-insensitive-enums=true
