--- a/compose.yaml
+++ b/compose.yaml
@@ -7,4 +7,13 @@ services:
     ports:
       - '5672'
   backend:
-    image: ''
+    build: .
+    container_name: fiscalnorth-backend
+    ports:
+      - '8080:8080'
+    environment:
+      - SPRING_RABBITMQ_HOST=rabbitmq
+      - SPRING_RABBITMQ_USERNAME=myuser
+      - SPRING_RABBITMQ_PASSWORD=secret
+    depends_on:
+      - rabbitmq
